--- a/index.html
+++ b/index.html
@@ -6,6 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pomodoro timer</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="script.js" defer></script>
+    <!--When the browser sees script without defer
+    1) Pauses HTML parsing right there
+    2) Downloads script.js
+    3) Runs it inmediately
+    4) continues parsing the rest of the HTML
+    
+    In my Js code I am selecting the start-timer, so it 
+    would not exist. And that's why I user defer. With defer:
+
+    1) I start downloading the script in parallel with the HTML
+    2) Keep parsing the rest of the HTML without parsing
+    3) Executes the script after the whole HTML is parsed
+
+    With defer, the DOM is ready when your JS runs, and document.querySelector works without wrapping your code in DOMContentLoaded
+    
+    -->
+
 </head>
 
 <body>
@@ -15,7 +33,7 @@
                 <span class="countdown">20:00</span>
             </div>
             <div class="button-timer">
-                <button class="start-timer">START</button>
+                <button class="start-timer" onClick="startTimer()">START</button>
             </div>
         </div>
 
