--- a/index.html
+++ b/index.html
@@ -27,17 +27,24 @@
 </head>
 
 <body>
-    <div class="pomodoro-container">
-        <div class="pomodoro-container-child">
-            <div class="timer">
-                <span class="countdown">20:00</span>
+    <header> </header>
+    <main>
+        <div class="pomodoro-container">
+            <div class="pomodoro-container-child">
+                <div class="timer">
+                    <span class="countdown">20:00</span>
+                </div>
+                <div class="button-timer">
+                    <button class="start-timer" onClick="startTimer()">START</button>
+                </div>
             </div>
-            <div class="button-timer">
-                <button class="start-timer" onClick="startTimer()">START</button>
-            </div>
-        </div>
 
-    </div>
+        </div>
+    </main>
+    <footer>
+        <!-- Audio player -->
+        <audio controls src="./music/chill1.mp3" type="audio.mpg"> </audio>
+    </footer>
 </body>
 
 </html>
